--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
 			<artifactId>android</artifactId>
 			<version>[4.1,)</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>[4.3,)</version>
-		</dependency>
+		</dependency> -->
 		<!-- <dependency> <groupId>org.apache.james</groupId> <artifactId>apache-mime4j</artifactId> 
 			</dependency> -->
 		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
